syntax = "proto3";

package proto;

import "basecoat_transport.proto";

option go_package = "github.com/clintjedwards/basecoat/proto";

service Basecoat {
  // Authentication routes
  rpc CreateAPIToken(CreateAPITokenRequest) returns (CreateAPITokenResponse);

  // System routes
  rpc GetSystemInfo(GetSystemInfoRequest) returns (GetSystemInfoResponse);

  // Account routes (Admin only)
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse);
  rpc ListAccounts(ListAccountsRequest) returns (ListAccountsResponse);
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
  rpc UpdateAccount(UpdateAccountRequest) returns (UpdateAccountResponse);
  rpc ToggleAccountState(ToggleAccountStateRequest)
      returns (ToggleAccountStateResponse);

  // Formula routes
  rpc GetFormula(GetFormulaRequest) returns (GetFormulaResponse);
  rpc ListFormulas(ListFormulasRequest) returns (ListFormulasResponse);
  rpc CreateFormula(CreateFormulaRequest) returns (CreateFormulaResponse);
  rpc AssociateFormulaWithJob(AssociateFormulaWithJobRequest)
      returns (AssociateFormulaWithJobResponse);
  rpc DisassociateFormulaFromJob(DisassociateFormulaFromJobRequest)
      returns (DisassociateFormulaFromJobResponse);
  rpc UpdateFormula(UpdateFormulaRequest) returns (UpdateFormulaResponse);
  rpc DeleteFormula(DeleteFormulaRequest) returns (DeleteFormulaResponse);

  // Base routes
  rpc GetBase(GetBaseRequest) returns (GetBaseResponse);
  rpc ListBases(ListBasesRequest) returns (ListBasesResponse);
  rpc CreateBase(CreateBaseRequest) returns (CreateBaseResponse);
  rpc AssociateBaseWithFormula(AssociateBaseWithFormulaRequest)
      returns (AssociateBaseWithFormulaResponse);
  rpc DisassociateBaseFromFormula(DisassociateBaseFromFormulaRequest)
      returns (DisassociateBaseFromFormulaResponse);
  rpc UpdateBase(UpdateBaseRequest) returns (UpdateBaseResponse);
  rpc DeleteBase(DeleteBaseRequest) returns (DeleteBaseResponse);

  // Colorant routes
  rpc GetColorant(GetColorantRequest) returns (GetColorantResponse);
  rpc ListColorants(ListColorantsRequest) returns (ListColorantsResponse);
  rpc CreateColorant(CreateColorantRequest) returns (CreateColorantResponse);
  rpc AssociateColorantWithFormula(AssociateColorantWithFormulaRequest)
      returns (AssociateColorantWithFormulaResponse);
  rpc DisassociateColorantFromFormula(DisassociateColorantFromFormulaRequest)
      returns (DisassociateColorantFromFormulaResponse);
  rpc UpdateColorant(UpdateColorantRequest) returns (UpdateColorantResponse);
  rpc DeleteColorant(DeleteColorantRequest) returns (DeleteColorantResponse);

  // Contact routes
  rpc GetContact(GetContactRequest) returns (GetContactResponse);
  rpc ListContacts(ListContactsRequest) returns (ListContactsResponse);
  rpc CreateContact(CreateContactRequest) returns (CreateContactResponse);
  rpc UpdateContact(UpdateContactRequest) returns (UpdateContactResponse);
  rpc DeleteContact(DeleteContactRequest) returns (DeleteContactResponse);

  // Contractor routes
  rpc GetContractor(GetContractorRequest) returns (GetContractorResponse);
  rpc ListContractors(ListContractorsRequest) returns (ListContractorsResponse);
  rpc CreateContractor(CreateContractorRequest)
      returns (CreateContractorResponse);
  rpc UpdateContractor(UpdateContractorRequest)
      returns (UpdateContractorResponse);
  rpc DeleteContractor(DeleteContractorRequest)
      returns (DeleteContractorResponse);

  // Job routes
  rpc GetJob(GetJobRequest) returns (GetJobResponse);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc CreateJob(CreateJobRequest) returns (CreateJobResponse);
  rpc UpdateJob(UpdateJobRequest) returns (UpdateJobResponse);
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse);
}
